--- a/static/styles.css
+++ b/static/styles.css
@@ -1,41 +1,57 @@
 .subgrid {
-  grid-column: screen; 
-  display: grid; 
-  grid-template-columns: inherit;
-  grid-template-rows: inherit;
-  grid-column-gap: inherit;
-  grid-row-gap: inherit;
+	grid-column: screen;
+	display: grid;
+	grid-template-columns: inherit;
+	grid-template-rows: inherit;
+	grid-column-gap: inherit;
+	grid-row-gap: inherit;
 }
 
 d-figure.base-grid {
-  grid-column: screen;
-  background: hsl(0, 0%, 97%);
-  padding: 20px 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	grid-column: screen;
+	background: hsl(0, 0%, 97%);
+	padding: 20px 0;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 d-figure {
-  margin-bottom: 1em;
-  position: relative;
+	margin-bottom: 1em;
+	position: relative;
 }
 
 d-figure > figure {
-  margin-top: 0;
-  margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .shaded-figure {
-  background-color: hsl(0, 0%, 97%);
-  border-top: 1px solid hsla(0, 0%, 0%, 0.1);
-  border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
-  padding: 30px 0;
+	background-color: hsl(0, 0%, 97%);
+	border-top: 1px solid hsla(0, 0%, 0%, 0.1);
+	border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
+	padding: 30px 0;
 }
 
 .pointer {
-  position: absolute;
-  width: 26px;
-  height: 26px;
-  top: 26px;
-  left: -48px;
+	position: absolute;
+	width: 26px;
+	height: 26px;
+	top: 26px;
+	left: -48px;
+}
+
+.todo {
+	padding: 0.5em;
+	background-color: hsla(50, 100%, 50%, 0.25);
+	border: 1px solid hsla(50, 100%, 50%, 0.5);
+	border-radius: 4px;
+	color: hsl(45, 100%, 20%);
+}
+
+.todo::before {
+	content: "⚠️";
+	position: relative;
+	font-size: 135%;
+	top: 4px;
+	margin-right: 0.5em;
 }
