--- a/static/styles.css
+++ b/static/styles.css
@@ -16,13 +16,37 @@ d-figure.base-grid {
 }
 
 d-figure {
-	margin-bottom: 1em;
+	margin-top: 1.5em;
+	margin-bottom: 2.5em;
 	position: relative;
 }
 
 d-figure > figure {
 	margin-top: 0;
 	margin-bottom: 0;
+}
+
+a.section-number::before {
+	content: "Section ";
+}
+
+a.figure-number::before {
+	content: "Figure ";
+}
+
+a.figure-number,
+a.section-number {
+	border-bottom-color: hsla(206, 90%, 20%, 0.3);
+	text-transform: uppercase;
+	font-size: 0.85em;
+	color: hsla(206, 90%, 20%, 0.7);
+}
+
+a.figure-number:hover,
+a.section-number:hover {
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: hsla(206, 90%, 20%, 0.7);
 }
 
 .shaded-figure {
@@ -54,4 +78,20 @@ d-figure > figure {
 	font-size: 135%;
 	top: 4px;
 	margin-right: 0.5em;
+}
+
+.todo.done {
+	background-color: hsla(50, 0%, 50%, 0.25);
+	border: 1px solid hsla(50, 0%, 50%, 0.5);
+	color: hsl(45, 0%, 20%);
+	text-decoration: line-through;
+}
+
+.todo.done::before {
+	content: "✅";
+	position: relative;
+	font-size: 135%;
+	top: 4px;
+	margin-right: 0.5em;
+	text-decoration: none !important;
 }
