WIP 4.1 universality diagram

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -244,12 +244,7 @@
 
     <h4>High/Low frequency detectors in other models</h4>
 
-    <figure id="4.1-similar-directions">
-      <img src="diagrams/4.1-similar-directions/placeholder.jpg" />
-      <figcaption class="figcaption">
-        Table of similar neurons; found by their artificial stimuli response
-      </figcaption>
-    </figure>
+    <%= require('./diagrams/similar-directions.ejs')() %>
 
     <h4>Tuning curves in other models</h4>
     <p>Show tuning curves!</p>
