--- a/src/index.ejs
+++ b/src/index.ejs
@@ -183,7 +183,7 @@
 
     <p>NMFing the weights into 2 factors recovers low/high frequency neuron clusters.</p>
 
-    <p class="todo"> Either fix with subgrid, or rethink layout!</p>
+    <p class="todo done"> Either fix with subgrid, or rethink layout!</p>
 
     <%= require('./diagrams/upstream-nmf.ejs')() %>
 
