--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -28,6 +28,9 @@
         border-radius: 0.25rem;
     }
 
+    div.units img.full {
+        margin-left: 1px;
+    }
     img.full {
         width: unset;
         object-fit: none;
