--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,10 +27,10 @@
 
     <h2 style="display: none;">Introduction</h2>
     <p>
-      Why should you study awkwardly-named "high/low frequency detectors" when we've just walked you through curve
+      Why should we study the awkwardly-named "high/low frequency detectors" when we've just walked you through curve
       detectors in detail? There's a strategic argument from the author's side: everybody® would guess that vision
-      networks contain curve detectors. It's easy to imagine how they'are built up from earlier edge detectors, and
-      they're common enough that neuroscientists routinely find them in animal visual corti. "High/low frequency
+      networks contain curve detectors. It's easy to imagine how they are built up from earlier edge detectors, and
+      they're common enough that neuroscientists routinely find them in animal visual cortices. "High/low frequency
       detectors", on the other hand, form a family of features we did not expect to find. Still, they have many of the
       hallmarks of important features: their existence feels natural in retrospect, they're an important part of later,
       higher-level features, and they're common across network architectures.
@@ -272,6 +272,7 @@
 
     <h2>Conclusion</h2>
     <p>?</p>
+    <p class="todo">Maybe devote a paragraph to concretizing the "their existence feels natural in retrospect" aspect of high/low frequency detectors – in particular, pointing out that high/low frequency is one way to infer the distance of objects? IIRC @colah has described this to me as such before.</p>
 
   </d-article>
 
