Link to mixed3a in Microscope

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -80,7 +80,7 @@
       </ul>
       <figcaption class="figcaption l-body">
         <a href="#1.1-feature-vis" class="figure-number">1</a>:
-        A variety of detectors from InceptionV1's <code>mixed3a</code> layer.
+        A variety of detectors from InceptionV1's <a href="https://microscope.openai.com/models/inceptionv1/mixed3a_0?models.op.feature_vis.type=neuron&models.op.technique=feature_vis"><code>mixed3a</code></a> layer.
       </figcaption>
     </figure>
 
